--- a/ui/main_dlg.ui
+++ b/ui/main_dlg.ui
@@ -306,7 +306,7 @@
                </font>
               </property>
               <property name="text">
-               <string>ε</string>
+               <string>ε(mm mrad)</string>
               </property>
              </widget>
             </item>
@@ -397,7 +397,7 @@
                </font>
               </property>
               <property name="text">
-               <string>εn</string>
+               <string>εn(mm mrad)</string>
               </property>
              </widget>
             </item>
